# coffeeshop-rs

./: .env.example  .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  build.rs  expanded.rs
.cargo/: config.toml
.github/workflows/: rust-CI.yml
examples/hello_world/: .python-version  Makefile  README.md  backend_config.tfvars.example  machine.rs  main.rs  main.tf  models.rs  provider.tf  variables.tf
examples/hello_world/client/: main.py
infrastructure/: README.md  config.tfvars.example  main.tf.example  variables.tf.example
infrastructure/modules/dynamodb/: main.tf  output.tf  variables.tf
infrastructure/modules/iam_role/: main.tf  output.tf  provider.tf  variables.tf
infrastructure/modules/sqs/: main.tf  output.tf  variables.tf
src/: cli.rs  errors.rs  lib.rs  logger.rs
src/errors/: generic_schema.rs  mod.rs  shop_error.rs
src/errors/handling/: into_coffeeshop_error.rs  mod.rs
src/helpers/: aws.rs  mod.rs  retry.rs
src/helpers/buffer/: mod.rs  write_wrapper.rs
src/helpers/dynamodb/: config.rs  func.rs  item_to_process_result.rs  mod.rs  process_result_to_item.rs  tests.rs
src/helpers/multicast/: mod.rs  socket.rs  test.rs
src/helpers/order_chain/: base.rs  errors.rs  iter.rs  mod.rs  segment.rs  tests.rs
src/helpers/serde/: mod.rs
src/helpers/sqs/: config.rs  encoding.rs  func.rs  mod.rs  staged_receipt.rs  tests.rs
src/helpers/sts/: mod.rs
src/models/: announcer.rs  barista.rs  cli.rs  collection_point.rs  machine.rs  mod.rs  order.rs  shop.rs  waiter.rs
src/models/message/: input.rs  metadata.rs  mod.rs  process_result.rs  query.rs  response.rs  status.rs  ticket.rs
src/models/message/proto/: mod.rs  multicast.proto
src/models/message/proto/implementations/: mod.rs  new.rs  status.rs
src/models/proto/: multicast.proto
src/models/proto/implementations/: mod.rs  new.rs
src/models/shop/: base.rs  mod.rs  open.rs  order.rs  tests.rs
src/models/shop/implementations/: collection_point.rs  has_aws_sdk_config.rs  has_dynamodb_config.rs  has_sqs_config.rs  mod.rs
src/models/test/: mod.rs
tests/: shop.rs
