[package]
name = "coffeeshop"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-sdk-dynamodb = "1.55.0"
aws-sdk-sqs = "1.50.0"
aws-sdk-sts = "1.51.0"
axum = "0.7.9"
base64 = "0.22.1"
bincode = "1.3.3"
brotli = { version = "7.0.0" }
chrono = { version = "0.4.39", features = ["serde"] }
clap = { version = "4.5.23", features = ["derive"] }
gethostname = "0.5.0"
gzp = "0.11.3"
hashbrown = "0.15.2"
prost = "0.13.4"
prost-types = "0.13.4"
rmp-serde = "1.3.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.134"
serde_with = "3.11.0"
tempfile = "3.14.0"
thiserror = "2.0.6"
tokio = { version = "1.42.0", features = ["fs", "macros", "rt-multi-thread", "signal", "sync", "time"] }
uuid = { version = "1.11.0", features = ["v4"] }

[build-dependencies]
prost-build = "0.13.4"

[dev-dependencies]
rand = "0.8.5"
