[package]
name = "coffeeshop"
version = "0.1.0"
edition = "2021"

[[example]]
name = "hello_world"
path = "examples/hello_world/main.rs"

[features]
default = ["debug", "sqs_strict", "test_on_aws"]
debug = ["dep:log", "dep:env_logger"]
env_logger = ["dep:env_logger"]
sqs_strict = []
test_on_aws = []
test_on_ci = []
reqwest = ["dep:reqwest"]

[dependencies]
async-trait = "0.1.83"
aws-config = { version = "1.5.11", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "1.55.0"
aws-sdk-sqs = "1.50.0"
aws-sdk-sts = "1.51.0"
axum = "0.7.9"
base64 = "0.22.1"
bincode = "1.3.3"
chrono = { version = "0.4.39", features = ["serde"] }
clap = { version = "4.5.23", features = ["derive"] }
env_logger = { version = "0.11.6", optional = true }
futures = "0.3.31"
gethostname = "0.5.0"
hashbrown = "0.15.2"
http-serde = "2.1.1"
log = { version = "0.4.22", features = ["std"], optional = true}
num_cpus = "1.16.0"
prost = "0.13.4"
prost-types = "0.13.4"
reqwest = { version = "0.12.12", features = ["json"], optional = true }
rmp-serde = "1.3.0"
rust-lzma = "0.6.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.134"
serde_with = "3.11.0"
socket2 = "0.5.8"
strum = { version = "0.26.3", features = ["derive"] }
tempfile = "3.14.0"
thiserror = "2.0.6"
tokio = { version = "1.42.0", features = ["fs", "macros", "rt-multi-thread", "signal", "sync", "time"] }
tokio_socket2 = "0.1.1"
tower-http = { version = "0.6.2", features = ["timeout", "trace"] }
uuid = { version = "1.11.0", features = ["v4"] }

[build-dependencies]
prost-build = "0.13.4"

[dev-dependencies]
rand = "0.8.5"
reqwest = { version = "0.12.12", features = ["json"] }
serial_test = "3.2.0"
